<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_home1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_1"
        android:layout_gravity="center"
        android:paddingTop="@dimen/xxlarge"
        android:textSize="@dimen/xlarge"
        android:layout_marginTop="@dimen/jumbo"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_home2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_2"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/xxlarge"
        android:textSize="@dimen/xlarge"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_home"
        android:background="@drawable/custom_btn_search"
        android:layout_width="@dimen/xjumbo"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/xsmall"
        android:layout_gravity="center"/>

</LinearLayout>